--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -63,6 +63,16 @@
 }
 .login-profile {
     padding-top: 0;
+
+}
+.login-profile > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.login-profile > div > button {
+    margin: 0 0.5em;
 }
 .login-profile > div > a {
     font: 200 1.5vmax "Roboto";
